<resources>
    <string name="app_name">Nadab</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>


    <string name="toolbar_title">Meals</string>
    <string name="search_hint">Type name…</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open Menu</string>
    <string name="drawer_close">Close Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meals">Meals</string>

    <string name="title_activity_items">ItemsActivity</string>
    <string name="add_to_items">Add to Items</string>
    <string name="cancel">Cancel</string>
    <string name="input_price">Input price</string>
    <string name="price">Price:</string>
    <string name="input_quantity">Input quantity</string>
    <string name="quantity">Quantity:</string>
    <string name="input_item_name">Input item name</string>
    <string name="name_of_item">Name of Item:</string>
    <string name="name">Name</string>
    <string name="ok">Okay</string>
    <string name="title_activity_product">Product</string>
    <string name="item_name">Item Name:</string>
    <string name="quantities">Quantity:</string>
    <string name="prices">Price:</string>
    <string name="add_meals">Add Meals</string>
    <string name="title_activity_order_list">OrderList</string>
    <string name="initial_quantity">1</string>
    <string name="title_activity_edit_meal">EditMeal</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="orders">Orders</string>

    <string name="bills">Bills</string>
    <string name="sales">Sales</string>
    <string name="dashboard">Dashboard</string>

    <string name="help_support">Help \u0026 Support</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="home">Home</string>
    <string name="profile">Sign out</string>

    <string name="sign_out">Sign out</string>
    <string name="action_search">Search</string>
    <string name="myprofile">Profile</string>
    <string name="termsconditions">By clicking REGISTER you agree all the terms \u0026 conditions.</string>
    <string name="already_user">Already have Account? Login here.</string>


    <string name="conditions" formatted="true"> conitions

    </string>
    <string name="read"><![CDATA[Read terms & conditions]]></string>
    <string name="title_activity_order">Order</string>

    <string name="default_notification_channel_id">0465</string>
    <string name="emoji"> &amp;#x128522</string>
    <string name="title_activity_hotel_sales">HotelSales</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hotel_sales">Hotel Sales</string>
    <string name="fees">Fees</string>
    <string name="total_orders">Total Orders</string>
    <string name="total_sales">Total Sales</string>


</resources>