<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DailySalesFragment"
    tools:showIn="@layout/fragment_daily_sales">


        <TextView
            android:id="@+id/total_orders"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:background="#FFFFFF"
            android:text="@string/orders"
            android:textSize="24sp"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_orders_heading" />

        <TextView
            android:id="@+id/total_sales"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="#FFFFFF"
            android:text="@string/title_activity_hotel_sales"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_sales_heading" />

        <TextView
            android:id="@+id/total_orders_heading"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="15dp"
            android:background="#FFFFFF"
            android:text="@string/total_orders"
            app:layout_constraintBottom_toTopOf="@+id/total_orders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_sales_heading"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="15dp"
            android:background="#FFFFFF"
            android:text="@string/total_sales"
            app:layout_constraintBottom_toTopOf="@+id/total_sales"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>