<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_weekly_sales"
    android:scrollbars="vertical"
    android:background="@color/colorPrimary"
    tools:context=".MonthlySalesFragment">


        <TextView
            android:id="@+id/total_orders"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="#FFFFFF"
            android:text="@string/orders"
            android:textSize="24sp"
            app:fontFamily="sans-serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/total_sales"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="#FFFFFF"
            android:text="@string/title_activity_hotel_sales"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/total_orders"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toEndOf="@+id/total_orders"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/total_orders_heading"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/total_orders"
            app:layout_constraintBottom_toTopOf="@+id/total_orders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_sales_heading"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/total_sales"
            app:layout_constraintBottom_toTopOf="@+id/total_sales"
            app:layout_constraintEnd_toEndOf="@+id/total_sales"
            app:layout_constraintHorizontal_bias="0.894"
            app:layout_constraintStart_toStartOf="@+id/total_sales"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.526" />
</android.support.constraint.ConstraintLayout>